# livedraw

./: LICENSE  README.md
art-rust-template/: .gitignore  Cargo.toml  README.md  axidraw_options.py  config.json
art-rust-template/src/: main.rs
livedraw-axidraw-watch/: axidraw-watch.py  requirements.txt
livedraw-rust/: Cargo.toml  README.md
livedraw-rust/src/: lib.rs
livedraw-server/: package.json  tsconfig.json
livedraw-server/src/: globalConfig.ts  index.ts  stateServer.ts  types.ts
livedraw-server/src/inputs/: CounterBtn.ts  KeyboardCurve.ts  LastChatMessage.ts  Poll.ts  Range.ts  XY.ts
livedraw-server/static/: admin.html  brick.html  index.html  pencam.html  perspectivecrop.html  speakchat.html
